--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -45,7 +45,7 @@ jobs:
 
       - name: Push Docker image to Google Artifact Registry
         run: |
-          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/linguatile-backend
+          docker push us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/backend-container/linguatile-backend
 
   # Deploy the Docker image to Cloud Run
   deploy:
@@ -71,7 +71,7 @@ jobs:
         uses: google-github-actions/deploy-cloudrun@v2
         with:
           service: ${{ secrets.GCP_PROJECT_ID }}
-          image: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/linguatile-backend
+          image: us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/backend-container/linguatile-backend
           region: us-central1
           project_id: ${{ secrets.GCP_PROJECT_ID }}
           flags: --platform managed --allow-unauthenticated
