Updated the image name

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Tag Docker image
         run: |
-          docker tag linguatile-backend us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/linguatile-backend
+          docker tag linguatile-backend us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/backend-container/linguatile-backend
 
       - name: Push Docker image to Google Artifact Registry
         run: |
