--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -39,6 +39,10 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
+      - name: Configure Docker authentication
+        run: |
+          gcloud auth configure-docker us-central1-docker.pkg.dev --quiet
+
       - name: Tag Docker image
         run: |
           docker tag linguatile-backend us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/backend-container/linguatile-backend
