--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -25,11 +25,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
-#      - name: Install Dependencies
-#        run: |
-#          python -m pip install --upgrade pip
-#          pip install -r requirements.txt
-
       - name: Build Docker image
         run: |
           docker build -t linguatile-backend .
@@ -65,12 +60,6 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-#      - name: Set up Cloud SDK
-#        uses: google-github-actions/setup-gcloud@v0
-#        with:
-#          project_id: ${{ secrets.GCP_PROJECT_ID }}
-#          service_account_key: ${{ secrets.GCP_SA_KEY }}
-
       - name: Deploy to Cloud Run
         uses: google-github-actions/deploy-cloudrun@v2
         with:
@@ -82,4 +71,4 @@ jobs:
 
       - name: Test the deployed service
         run: |
-          curl ${{ steps.deploy.outputs.url }}  
+          curl "${{ steps.deploy.outputs.url }}"
