Updated the workflow to ignore non-api-related changes

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -3,6 +3,10 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - 'README.md'
+      - '.github/**'
+      - '.gitignore'
 
 jobs:
   # Set up python environment and build the Docker image
