--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,42 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.2
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
+APScheduler==3.10.4
+attrs==25.4.0
 bcrypt==4.3.0
 black==25.1.0
 certifi==2025.8.3
+cffi==2.0.0
 charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
+cryptography==46.0.3
 dnspython==2.7.0
 ecdsa==0.19.1
 fastapi==0.116.1
+frozenlist==1.8.0
 fsrs==6.1.1
 h11==0.16.0
+http_ece==1.2.1
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 jaconv==0.4.0
 mecab-python3==1.0.10
+multidict==6.7.0
 mypy_extensions==1.1.0
 packaging==25.0
 passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+propcache==0.4.1
+py-vapid==1.9.2
 pyasn1==0.6.1
+pycparser==2.23
 pydantic==2.11.7
 pydantic_core==2.33.2
 Pygments==2.19.2
@@ -33,6 +46,8 @@ pytest==8.4.1
 pytest-asyncio==1.1.0
 python-dotenv==1.1.1
 python-jose==3.5.0
+pytz==2025.2
+pywebpush==2.1.2
 requests==2.32.4
 rsa==4.9.1
 six==1.17.0
@@ -40,8 +55,8 @@ sniffio==1.3.1
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzlocal==5.3.1
 unidic-lite==1.0.8
 urllib3==2.5.0
 uvicorn==0.35.0
-pywebpush==1.14.0
-apscheduler==3.10.4
+yarl==1.22.0
