--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ charset-normalizer==3.4.3
 click==8.2.1
 colorama==0.4.6
 cryptography==46.0.3
+Deprecated==1.3.1
 dnspython==2.7.0
 ecdsa==0.19.1
 fastapi==0.116.1
@@ -25,6 +26,7 @@ httpx==0.28.1
 idna==3.10
 iniconfig==2.1.0
 jaconv==0.4.0
+limits==5.6.0
 mecab-python3==1.0.10
 multidict==6.7.0
 mypy_extensions==1.1.0
@@ -46,11 +48,13 @@ pytest==8.4.1
 pytest-asyncio==1.1.0
 python-dotenv==1.1.1
 python-jose==3.5.0
+python-json-logger==2.0.7
 pytz==2025.2
 pywebpush==2.1.2
 requests==2.32.4
 rsa==4.9.1
 six==1.17.0
+slowapi==0.1.9
 sniffio==1.3.1
 starlette==0.47.2
 typing-inspection==0.4.1
@@ -59,4 +63,5 @@ tzlocal==5.3.1
 unidic-lite==1.0.8
 urllib3==2.5.0
 uvicorn==0.35.0
+wrapt==2.0.1
 yarl==1.22.0
