--- a/requirements.txt
+++ b/requirements.txt
@@ -41,6 +41,7 @@ py-vapid==1.9.2
 pyasn1==0.6.1
 pycparser==2.23
 pydantic==2.11.7
+pydantic-settings==2.12.0
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
