--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ cryptography==46.0.3
 Deprecated==1.3.1
 dnspython==2.7.0
 ecdsa==0.19.1
+Faker==39.0.0
 fastapi==0.116.1
 frozenlist==1.8.0
 fsrs==6.1.1
@@ -36,6 +37,7 @@ passlib==1.7.4
 pathspec==0.12.1
 platformdirs==4.3.8
 pluggy==1.6.0
+polyfactory==3.2.0
 propcache==0.4.1
 py-vapid==1.9.2
 pyasn1==0.6.1
@@ -61,6 +63,7 @@ sniffio==1.3.1
 starlette==0.47.2
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.3
 tzlocal==5.3.1
 unidic-lite==1.0.8
 urllib3==2.5.0
