--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,4 +23,4 @@ jobs:
 
       - name: Test with pytest
         run: |
-          TESTING=True PYTHONPATH=. pytest tests
+          MONGO_HOST=${{ secrets.MONGO_HOST }} SECRET_KEY=${{ secrets.SECRET_KEY }} TESTING=True PYTHONPATH=. pytest tests
