--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,6 @@ anyio==4.10.0
 APScheduler==3.10.4
 attrs==25.4.0
 bcrypt==4.3.0
-black==25.1.0
 certifi==2025.8.3
 cffi==2.0.0
 charset-normalizer==3.4.3
@@ -15,7 +14,7 @@ click==8.2.1
 colorama==0.4.6
 cryptography==46.0.3
 Deprecated==1.3.1
-dnspython==2.7.0
+dnspython==2.8.0
 ecdsa==0.19.1
 Faker==39.0.0
 fastapi==0.116.1
@@ -50,6 +49,7 @@ PyJWT==2.10.1
 pymongo==4.14.0
 pytest==8.4.1
 pytest-asyncio==1.1.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-jose==3.5.0
 python-json-logger==2.0.7
@@ -57,6 +57,7 @@ pytz==2025.2
 pywebpush==2.1.2
 requests==2.32.4
 rsa==4.9.1
+ruff==0.14.10
 six==1.17.0
 slowapi==0.1.9
 sniffio==1.3.1
