Added new env requirements

--- a/default.env.example
+++ b/default.env.example
@@ -11,3 +11,7 @@ SECRET_KEY='YOUR_SECRET_KEY'
 VAPID_PUBLIC_KEY='YOUR_VAPID_PUBLIC_KEY'
 VAPID_PRIVATE_KEY='YOUR_VAPID_PRIVATE_KEY'
 VAPID_MAILTO='mailto:your_email@example.com'
+
+# Google OAuth
+GOOGLE_CLIENT_ID='YOUR_GOOGLE_CLIENT_ID'
+GOOGLE_CLIENT_SECRET='YOUR_GOOGLE_CLIENT_SECRET'
