--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
 APScheduler==3.10.4
+Authlib==1.4.0
 attrs==25.4.0
 bcrypt==4.3.0
 certifi==2025.8.3
@@ -25,6 +26,7 @@ http_ece==1.2.1
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
+itsdangerous==2.1.2
 iniconfig==2.1.0
 jaconv==0.4.0
 limits==5.6.0
