--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,8 @@ aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.10.0
 APScheduler==3.10.4
-Authlib==1.4.0
 attrs==25.4.0
+Authlib==1.4.0
 bcrypt==4.3.0
 certifi==2025.8.3
 cffi==2.0.0
@@ -26,8 +26,8 @@ http_ece==1.2.1
 httpcore==1.0.9
 httpx==0.28.1
 idna==3.10
-itsdangerous==2.1.2
 iniconfig==2.1.0
+itsdangerous==2.1.2
 jaconv==0.4.0
 limits==5.6.0
 mecab-python3==1.0.10
@@ -58,6 +58,7 @@ python-json-logger==2.0.7
 pytz==2025.2
 pywebpush==2.1.2
 requests==2.32.4
+resend==2.19.0
 rsa==4.9.1
 ruff==0.14.10
 six==1.17.0
